# demineur_ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/core/: board.py  cell.py  game_logic.py  observer.py  player.py
src/tests/: test_board.py  test_cell.py  test_console_ui.py  test_game_logic.py  test_observer.py  test_player.py
src/ui/: colors.py  console_ui.py  graphical_ui.py
