[project]
name = "demineur-game"
version = "1.0.0"
description = "Python implementation of the classic Minesweeper game, also known as 'Demineur' (🇫🇷). The game features a graphical user interface and includes a bot option for automatically solving the game."
readme = "README.md"
authors = [
  { name = "Eliot CHRISTON", email = "eliot.christon@gmail.com" },
]

requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pygame==2.6.1",
]
urls.repository = "https://github.com/eliot-christon/demineur_ai"
[project.optional-dependencies]
dev = [
  "pre_commit==4.2.0",
  "pylint==3.3.7",
  "pytest-8.4.1"
]

[tool.ruff]
target-version = "py38"
line-length = 100
lint.select = [ "ALL" ]
lint.ignore = [ "COM812", "D", "ERA", "T" ]

[tool.pylint]
max-line-length = 100
max-positional-arguments = 10
max-args = 10
max-nested-blocks = 10
min-public-methods = 0
max-attributes = 10
max-locals = 20
max-branches = 25
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "line-too-long",
]
unsafe-load-any-extension = true

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
